Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@ seconds is applied. Override this with the <code>-w</code> argument (0 meaning n
 </tbody>
 </table>
 
-<p>Use the <code>-p</code> flag to set which preset to apply.</p>
+<p>Use the <code>-p</code> flag to choose a preset.</p>
 
 <h2>
 <a id="help" class="anchor" href="#help" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Help</h2>
